// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/discourse/fetch snapshot testing loads a particular post from snapshot 1`] = `
Object {
  "authorUsername": "d11",
  "cooked": "<p>This is a test post.</p>
<p>EDIT: This test post was edited on October 24, 2019.</p>",
  "id": 14,
  "indexWithinTopic": 1,
  "replyToPostIndex": null,
  "timestampMs": 1564744349476,
  "topicId": 11,
}
`;

exports[`plugins/discourse/fetch snapshot testing loads a particular topic from snapshot 1`] = `
Object {
  "posts": Array [
    Object {
      "authorUsername": "d11",
      "cooked": "<p>This is a test post.</p>
<p>EDIT: This test post was edited on October 24, 2019.</p>",
      "id": 14,
      "indexWithinTopic": 1,
      "replyToPostIndex": null,
      "timestampMs": 1564744349476,
      "topicId": 11,
    },
    Object {
      "authorUsername": "dl-proto",
      "cooked": "<p>Ah, an excellent post. I will like it and reply.</p>",
      "id": 16,
      "indexWithinTopic": 2,
      "replyToPostIndex": null,
      "timestampMs": 1564744496285,
      "topicId": 11,
    },
    Object {
      "authorUsername": "d11",
      "cooked": "<p>Adding another post, after having deleted a whole thread.</p>",
      "id": 22,
      "indexWithinTopic": 3,
      "replyToPostIndex": null,
      "timestampMs": 1564951839667,
      "topicId": 11,
    },
  ],
  "topic": Object {
    "authorUsername": "d11",
    "id": 11,
    "timestampMs": 1564744349408,
    "title": "My First Test Post",
  },
}
`;

exports[`plugins/discourse/fetch snapshot testing loads latest posts from snapshot 1`] = `
Array [
  Object {
    "authorUsername": "d11",
    "cooked": "<p>Here is a mention: <a class=\\"mention\\" href=\\"/u/dl-proto\\">@dl-proto</a><br>
Here is a topic reference:  <a href=\\"https://sourcecred-test.discourse.group/t/123-a-post-with-numbers-in-slug/20/\\" class=\\"inline-onebox\\">123 a post with numbers in slug</a><br>
Here is a post reference with a slug: <a href=\\"https://sourcecred-test.discourse.group/t/my-first-test-post/11/4\\" class=\\"inline-onebox\\">My First Test Post</a></p>",
    "id": 29,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1571855191281,
    "topicId": 21,
  },
  Object {
    "authorUsername": "d11",
    "cooked": "<p>Oh the post won’t be empty I assure you.</p>",
    "id": 28,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1570420159922,
    "topicId": 20,
  },
  Object {
    "authorUsername": "d11",
    "cooked": "<p>I’m replying to a wiki.</p>",
    "id": 27,
    "indexWithinTopic": 2,
    "replyToPostIndex": null,
    "timestampMs": 1570049836311,
    "topicId": 19,
  },
  Object {
    "authorUsername": "d11",
    "cooked": "<p>So I’m starting the wiki content.</p>
<p>No remove that line.</p>
<p>Ah now I’ve added another line.</p>",
    "id": 26,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1570049491743,
    "topicId": 19,
  },
  Object {
    "authorUsername": "d11",
    "cooked": "<p>Testing a poll. Let’s see how it works.</p>
<div class=\\"poll\\" data-poll-status=\\"open\\" data-poll-max=\\"5\\" data-poll-min=\\"1\\" data-poll-public=\\"true\\" data-poll-results=\\"always\\" data-poll-type=\\"multiple\\" data-poll-name=\\"poll\\">
<div>
<div class=\\"poll-container\\">
<ul>
<li data-poll-option-id=\\"159d8e412be4679f2d98fb5f0d0cce91\\">One</li>
<li data-poll-option-id=\\"2cbb44549228f1cf22e44fba86b6db21\\">Two</li>
<li data-poll-option-id=\\"7016bd7a00c7caff922822b2910a564a\\">Three</li>
<li data-poll-option-id=\\"d2bb44ccb6b19c98cc57f5b8bb87effe\\">Four</li>
<li data-poll-option-id=\\"c677eae47d33ca9b527e7ea7bb29612c\\">Five</li>
</ul>
</div>
<div class=\\"poll-info\\">
<p>
<span class=\\"info-number\\">0</span>
<span class=\\"info-label\\">voters</span>
</p>
</div>
</div>
</div>",
    "id": 25,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1570049410625,
    "topicId": 18,
  },
  Object {
    "authorUsername": "d11",
    "cooked": "<p>Adding another post, after having deleted a whole thread.</p>",
    "id": 22,
    "indexWithinTopic": 3,
    "replyToPostIndex": null,
    "timestampMs": 1564951839667,
    "topicId": 11,
  },
  Object {
    "authorUsername": "d11",
    "cooked": "<aside class=\\"quote no-group\\" data-post=\\"1\\" data-topic=\\"13\\">
<div class=\\"title\\">
<div class=\\"quote-controls\\"></div>
<img alt width=\\"20\\" height=\\"20\\" src=\\"https://avatars.discourse.org/v4/letter/d/8797f3/40.png\\" class=\\"avatar\\"> dl-proto:</div>
<blockquote>
<p>Here is a link to another discourse thread:</p>
</blockquote>
</aside>
<p>Excellent link. I’ve quoted you.</p>",
    "id": 18,
    "indexWithinTopic": 2,
    "replyToPostIndex": null,
    "timestampMs": 1564744591313,
    "topicId": 13,
  },
  Object {
    "authorUsername": "dl-proto",
    "cooked": "<p>Here is a link to another discourse thread: <a href=\\"https://sourcecred-test.discourse.group/t/my-first-test-post/11/3\\" class=\\"inline-onebox\\">My First Test Post</a></p>
<p>Here is a link to a GitHub issue: <a href=\\"https://github.com/sourcecred-test/example-github/issues/1\\" rel=\\"nofollow noopener\\">https://github.com/sourcecred-test/example-github/issues/1</a></p>",
    "id": 17,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1564744553905,
    "topicId": 13,
  },
  Object {
    "authorUsername": "dl-proto",
    "cooked": "<p>Ah, an excellent post. I will like it and reply.</p>",
    "id": 16,
    "indexWithinTopic": 2,
    "replyToPostIndex": null,
    "timestampMs": 1564744496285,
    "topicId": 11,
  },
  Object {
    "authorUsername": "d11",
    "cooked": "<p>This is a test post.</p>
<p>EDIT: This test post was edited on October 24, 2019.</p>",
    "id": 14,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1564744349476,
    "topicId": 11,
  },
  Object {
    "authorUsername": "system",
    "cooked": "<p>This is a test instance.<br>
The first paragraph of this pinned topic will be visible as a welcome message to all new visitors on your homepage. It’s important!</p>
<p><strong>Edit this</strong> into a brief description of your community:</p>
<ul>
<li>Who is it for?</li>
<li>What can they find here?</li>
<li>Why should they come here?</li>
<li>Where can they read more (links, resources, etc)?</li>
</ul>
<p><img src=\\"https://sjc3.discourse-cdn.com/free1/images/welcome/discourse-edit-post-animated.gif\\" width=\\"508\\" height=\\"106\\"></p>
<p>You may want to close this topic via the admin <img src=\\"https://sjc3.discourse-cdn.com/free1/images/emoji/twitter/wrench.png?v=9\\" title=\\":wrench:\\" class=\\"emoji\\" alt=\\":wrench:\\"> (at the upper right and bottom), so that replies don’t pile up on an announcement.</p>",
    "id": 10,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1554236412933,
    "topicId": 7,
  },
  Object {
    "authorUsername": "system",
    "cooked": "<p>Discussion about this site, its organization, how it works, and how we can improve it.</p>",
    "id": 1,
    "indexWithinTopic": 1,
    "replyToPostIndex": null,
    "timestampMs": 1554236409844,
    "topicId": 1,
  },
]
`;

exports[`plugins/discourse/fetch snapshot testing loads user likes from snapshot 1`] = `
Array [
  Object {
    "postId": 14,
    "timestampMs": 1564744498189,
    "username": "dl-proto",
  },
]
`;
